--- a/main.css
+++ b/main.css
@@ -1,7 +1,15 @@
-html, body { 
-  height: 100%; margin: 0; padding: 0; 
+html, 
+body { 
+  height: 100%; 
+  margin: 0; 
+  padding: 0; 
 }
 #map { 
   height: 100%; 
 }
+button {
+  height: 30px;
+  margin: 5px 20px;
+}
+
 
