--- a/main.css
+++ b/main.css
@@ -56,5 +56,12 @@ hr {
   position: relative;
   margin-left: 10px;
 }
+#zoom-to-area-text {
+  position: relative;
+  width: 70%;
+}
+#zoom-to-area {
+  width: 24%;
+}
 
 
